@@ -19,7 +19,7 @@ log4j.logger.org.springframework=INFO
 log4j.logger.org.springframework.web=TRACE
 #log4j.logger.org.springframework.context.annotation=TRACE
 log4j.logger.org.springframework.osgi.util=INFO
-#log4j.logger.org.springframework.osgi.io=TRACE
+log4j.logger.org.springframework.osgi.io=TRACE
 #log4j.logger.org.springframework.osgi.iandt=TRACE
 #log4j.logger.org.springframework.osgi.test=TRACE
 #log4j.logger.org.springframework.osgi.iandt=TRACE
